Update `Policy` interface to return boolean, refactor policies and `PolicyRegistry` to enforce validation, and enhance `PolicyEngine` with actionable checks.