@@ -1,32 +1,31 @@
 package com.app.policy;
 
-
 import com.app.policy.annotation.PolicyType;
-import com.app.policy.policies.guild.BanPolicy;
 
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 
 public class PolicyRegistry {
 
-    private final Map<Action, List<Policy>> policies = new HashMap<>();
-    private final Set<Class<?>> registered = new HashSet<>();
-    Map<Action,Policy> policyMap = new HashMap<>();
+    private final Map<Action, List<Policy>> policies = new ConcurrentHashMap<>();
+    private final Set<Class<?>> registered = Collections.newSetFromMap(new ConcurrentHashMap<>());
 
-    public PolicyRegistry() {
-        policyMap.put(Action.BAN,new BanPolicy());
-    }
     public void register(Class<?> clazz) {
 
         if (registered.contains(clazz)) return;
 
         if (!clazz.isAnnotationPresent(PolicyType.class)) return;
 
+        if (!Policy.class.isAssignableFrom(clazz)) {
+            throw new IllegalArgumentException("Class must implement Policy: " + clazz.getName());
+        }
+
         PolicyType annotation = clazz.getAnnotation(PolicyType.class);
 
         try {
             Policy policy = (Policy) clazz.getDeclaredConstructor().newInstance();
 
-            var action = annotation.action();
+            Action action = annotation.action();
 
             policies.computeIfAbsent(action, k -> new ArrayList<>())
                     .add(policy);
@@ -39,6 +38,6 @@ public class PolicyRegistry {
     }
 
     public List<Policy> getPolicies(Action action) {
-        return policies.getOrDefault(action, List.of());
+        return policies.getOrDefault(action, Collections.emptyList());
     }
 }
